Small refactoring of Munge plug-in.